@@ -33,6 +33,7 @@ Bugs fixed
 - Bug 1937 - FlowMonitor fails to track multiplexed packets
 - Bug 1943 - Waveform generator signal duration calc error
 - Bug 1951 - AODV does not update nexthop for 1-hop nodes
+- Bug 1955 - The IPv4 identification field should be unique per (source, destination, protocol) tuple
 
 Known issues
 ------------
